css fixed arrow alignment in rotator

--- a/themes/nudev/src/__PRECOMP/sass/homepage.scss
+++ b/themes/nudev/src/__PRECOMP/sass/homepage.scss
@@ -338,14 +338,14 @@ div.main{
               width: 80px;
               overflow: hidden;
               margin: 0 0 10px 0;
+              display: table;
               & > .slider_next,
               & > .slider_prev {
                 display: none;
                 float: left;
                 margin: 0 10px 0 0;
                 @include font-5r-l;
-                line-height: 34px;
-                //line-height:2.9rem;
+                line-height: inherit;
       				  width: 28px;
                 height: 28px;
                 text-align: center;
@@ -354,6 +354,9 @@ div.main{
                 color: rgba($brand_colors-black,1.0);
                 box-shadow: 0 2px 4px rgba($brand_colors-black,.5);
       					z-index:100;
+                display:table-cell ;
+                vertical-align:middle;
+                padding-top:1px;
       					&:hover {
       						background: rgba($brand_colors-white,1.0);
                   color: rgba($brand_colors-black,1.0);
